--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ version = "0.1.0"
 description = "ATU-10 tuner firmware algorithm simulator and LC model"
 readme = "README.md"
 requires-python = ">=3.10"
+dependencies = ["matplotlib>=3.8"]
 authors = [
   {name = "Ben Gelb", email = "ben.gelb@gmail.com"},
 ]
