--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,3 +15,6 @@ authors = [
 
 [project.urls]
 Home = "https://github.com/bgelb/atu10-firmware-sim"
+
+[project.optional-dependencies]
+dev = ["pytest>=7.0"]
